Corrects sidebar collapse

--- a/resources/assets/sass/mix/dashboard.scss
+++ b/resources/assets/sass/mix/dashboard.scss
@@ -73,19 +73,3 @@ div.clocks iframe {
   width: 200px;
   height: 64px;
 }
-
-.collapsible {
-  cursor: pointer;
-}
-
-.content {
-  text-align: left;
-  overflow: hidden;
-  min-height: 0;
-  max-height: 0;
-  transition: max-height 0.5s ease-out;
-}
-
-.open {
-  transform: rotate(-90deg);
-}
